# notes-wasm-rs

./: .gitignore  Cargo.toml  README.md  clion.Dockerfile  dev.Dockerfile  setup.sh
.devcontainer/: devcontainer.json
linux-files/: Cargo.toml
linux-files/src/: fs_watcher.rs  main.rs  model.rs  networking.rs
src/: main.rs  model.rs
web-app/: Cargo.toml  index.html
web-app/src/: lib.rs
