[package]
name = "notes-linux-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-join = "0.1.2"
notify = "5.0.0"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"